# OglTester

./: README.md
Scene/Gears/: CMakeLists.txt  make_clean.bat  makelib.bat  makelib.sh
Scene/Gears/src/: CMakeLists.txt  FunctionImplementation.cpp  NotifyMsg.h  gears.cpp  gears.h  glDsoCommon.h
Scene/glsl_cookbook/: CMakeLists.txt  makelib.bat  makelib.sh
Scene/glsl_cookbook/3rd/: readme.txt
Scene/glsl_cookbook/3rd/OpenGL/include/glm/gtc/: matrix_projection.hpp
Scene/glsl_cookbook/3rd/OpenGL/lib/Linux/x32/: libGLEW.so.1.9.0  libnoise.so.0  libnoise.so.0.3
Scene/glsl_cookbook/3rd/OpenGL/lib/Linux/x64/: libGLEW.so.1.9.0  libnoise.so.0.3
Scene/glsl_cookbook/src/: CMakeLists.txt  FunctionImplementation.cpp  NotifyMsg.h  README  glDsoCommon.h  glslprogram.cpp  glslprogram.h  scene.h  sceneManager.cpp  sceneManager.h  sceneads.cpp  sceneads.h  scenebasic.cpp  scenebasic.h  scenebasic_layout.cpp  scenebasic_layout.h  scenebasic_uniform.cpp  scenebasic_uniform.h  scenebasic_uniformblock.cpp  scenebasic_uniformblock.h  scenediffuse.cpp  scenediffuse.h  scenedirectional.cpp  scenedirectional.h  scenediscard.cpp  scenediscard.h  sceneflat.cpp  sceneflat.h  scenefog.cpp  scenefog.h  scenemultilight.cpp  scenemultilight.h  sceneperfragment.cpp  sceneperfragment.h  scenespot.cpp  scenespot.h  scenesubroutine.cpp  scenesubroutine.h  scenetoon.cpp  scenetoon.h  (+8 more)
Scene/glsl_cookbook/src/shader/: discard.frag
UiFrame/: OglTester.pro  uiframe.qrc  win.bat  win_clean.bat
UiFrame/inc/: DsoGadget.h  glScene.h  glSceneManager.h  globaldef.h  glwidget.h  glwidgetManager.h  grabControls.h  lightControls.h  sceneWizard.h  transformControls.h  uiframe.h
UiFrame/src/: DsoGadget.cpp  glScene.cpp  glSceneManager.cpp  glwidget.cpp  glwidgetManager.cpp  grabControls.cpp  lightControls.cpp  main.cpp  sceneWizard.cpp  transformControls.cpp  uiframe.cpp
